K8S/portfolio-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
