K8S/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "nginx"
  rules:
    - host: protfolio.192.168.56.241.sslip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: portfolio-loadbalancer
              port:
                number: 80
